--- a/src/rekammedis/RMPenilaianPasienTerminal.form
+++ b/src/rekammedis/RMPenilaianPasienTerminal.form
@@ -340,7 +340,7 @@
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="1">
-                        <StringItem index="0" value="02-07-2024"/>
+                        <StringItem index="0" value="22-11-2024"/>
                       </StringArray>
                     </Property>
                     <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -368,7 +368,7 @@
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="1">
-                        <StringItem index="0" value="02-07-2024"/>
+                        <StringItem index="0" value="22-11-2024"/>
                       </StringArray>
                     </Property>
                     <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -576,7 +576,7 @@
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                           <StringArray count="1">
-                            <StringItem index="0" value="02-07-2024"/>
+                            <StringItem index="0" value="22-11-2024"/>
                           </StringArray>
                         </Property>
                         <Property name="displayFormat" type="java.lang.String" value="dd-MM-yyyy"/>
@@ -1427,17 +1427,19 @@
                     <Component class="widget.ComboBox" name="MenjelangAjal">
                       <Properties>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="5">
+                          <StringArray count="6">
                             <StringItem index="0" value="Menolak"/>
                             <StringItem index="1" value="Marah"/>
                             <StringItem index="2" value="Menawar"/>
                             <StringItem index="3" value="Depresi"/>
                             <StringItem index="4" value="Menerima"/>
+                            <StringItem index="5" value="Tidak dapat dikaji"/>
                           </StringArray>
                         </Property>
                         <Property name="name" type="java.lang.String" value="MenjelangAjal" noResource="true"/>
                       </Properties>
                       <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenjelangAjalActionPerformed"/>
                         <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="MenjelangAjalKeyPressed"/>
                       </Events>
                       <Constraints>
